--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <h1>Winrate Calculator</h1>
 <p style="margin-bottom: 3px;">v0.9</p>
 
-<label for="coin">Desired winrate:</label><br>
+<label for="coin">Desired winrate</label><br>
 <input type="text" id="d" name="d" maxlength='5' required>
 <br>
-<label for="t">Wins:</label><br>
+<label for="t">Wins</label><br>
 <input type="text" id="w" name="w" maxlength='4' required>
 <br>
-<label for="s">Losses:</label><br>
+<label for="s">Losses</label><br>
 <input type="text" id="l" name="l" maxlength='4' required>
 <br>
 <button onclick="winrateCalc()">Calc</button>
